--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
               <h2 class="visually-hidden">Filter events</h2>
             </div>
           </div>
-          <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
+          <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" data-type="new-event" type="button">New event</button>
         </div>
       </div>
     </header>
